--- a/templates/ibm-cloudpak-root.yaml
+++ b/templates/ibm-cloudpak-root.yaml
@@ -131,17 +131,17 @@ Metadata:
       LicenseAgreement:
         default: License agreement
       WSL:
-        default: Watson Studio Addon
+        default: Watson Studio service
       WML:
-        default: Watson Machine Learning Addon  
+        default: Watson Machine Learning service  
       WKC:
-        default: Watson Knowledge Catalog Addon  
+        default: Watson Knowledge Catalog service  
       DV:
-        default: Data Virtualization Addon
+        default: Data Virtualization service
       OSWML:
-        default: Watson OpenScale and Watson Machine Learning Addons    
+        default: Watson OpenScale and Watson Machine Learning services    
       APIKey:
-        default: IBM Cloud Pak for Data Apikey Value  
+        default: IBM Cloud Pak for Data API key value 
       ICPDVersion:
         default: IBM Cloud Pak for Data version
       Namespace:
@@ -150,7 +150,7 @@ Parameters:
 
   DV:
     Description: >-
-       Data Virtualization addon to be installed along with IBM Cloud Pak for Data Quick Start.
+       Choose True to install the Data Virtualization service.
     Type: String
     AllowedValues:
       - "False"
@@ -158,7 +158,7 @@ Parameters:
     Default: "False"
   WML:
     Description: >-
-       Watson Machine Learning addon to be installed along with IBM Cloud Pak for Data Quick Start.
+       Choose True to install the Watson Machine Learning service.
     Type: String
     AllowedValues:
       - "False"
@@ -166,7 +166,7 @@ Parameters:
     Default: "False"
   WSL:
     Description: >-
-       Watson Studio addon to be installed along with IBM Cloud Pak for Data Quick Start.
+       Choose True to install the Watson Studio service.
     Type: String
     AllowedValues:
       - "False"
@@ -174,7 +174,7 @@ Parameters:
     Default: "False"
   WKC:
     Description: >-
-       Watson Knowledge Catalog addon to be installed along with IBM Cloud Pak for Data Quick Start.
+       Choose True to install the Watson Knowledge Catalog service.
     Type: String
     AllowedValues:
       - "False"
@@ -182,7 +182,7 @@ Parameters:
     Default: "False"
   OSWML:
     Description: >-
-       Watson OpenScale and Watson Machine Learning addons to be installed along with IBM Cloud Pak for Data Quick Start.
+       Choose True to install the Watson OpenScale and Watson Machine Learning services.
     Type: String
     AllowedValues:
       - "False"
@@ -190,7 +190,7 @@ Parameters:
     Default: "False"  
   APIKey:
     Description: >-
-       IBM Cloud Pak for Data Apikey to access IBM Container Registry or leave it blank for a 60-day trial installation.
+       Enter the IBM Cloud Pak for Data API key to access IBM Container Registry, or leave this parameter blank to use a 60-day trial installation.
     Type: String 
     NoEcho: 'true'
     Default: ""            
